--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 cpu_scheduling_rust/target/
 disk_scheduling_rust/target/
 page_replacement_rust/target/
+frame_allocation_rust/target/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
