Made steps toward implementing page fault frequency algorithm

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ cpu_scheduling_rust/target/
 disk_scheduling_rust/target/
 page_replacement_rust/target/
 frame_allocation_rust/target/
+frame_allocation_rust/.vscode/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
